k8s-deployments/02-ci-pipeline/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-pipeline
spec:
  rules:
    - http:
        paths:
          - path: /ci-pipeline-staging(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ci-pipeline-staging
                port:
                  number: 3000
